--- a/DAO_BLL/DAO_BLL.csproj
+++ b/DAO_BLL/DAO_BLL.csproj
@@ -47,6 +47,7 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="LoaiPhongDAO.cs" />
     <Compile Include="NhanVienDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
