--- a/DoAn_QuanLiKhachSan.csproj
+++ b/DoAn_QuanLiKhachSan.csproj
@@ -88,6 +88,18 @@
     <Compile Include="FrmDangNhap.Designer.cs">
       <DependentUpon>FrmDangNhap.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmQuanLiThongTinNhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmQuanLiThongTinNhanVien.Designer.cs">
+      <DependentUpon>frmQuanLiThongTinNhanVien.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmThongTinNhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmThongTinNhanVien.Designer.cs">
+      <DependentUpon>frmThongTinNhanVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDanhSachPhong.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -138,6 +150,12 @@
     <Compile Include="ThongTinKhachHangForm.Designer.cs">
       <DependentUpon>ThongTinKhachHangForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmThayDoiMatKhau.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmThayDoiMatKhau.Designer.cs">
+      <DependentUpon>frmThayDoiMatKhau.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="DatPhongForm.resx">
       <DependentUpon>DatPhongForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -149,6 +167,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmDangNhap.resx">
       <DependentUpon>FrmDangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmQuanLiThongTinNhanVien.resx">
+      <DependentUpon>frmQuanLiThongTinNhanVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmThongTinNhanVien.resx">
+      <DependentUpon>frmThongTinNhanVien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmDanhSachPhong.resx">
       <DependentUpon>frmDanhSachPhong.cs</DependentUpon>
@@ -183,6 +207,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ThongTinKhachHangForm.resx">
       <DependentUpon>ThongTinKhachHangForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmThayDoiMatKhau.resx">
+      <DependentUpon>frmThayDoiMatKhau.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
