--- a/DoAn_QuanLiKhachSan.csproj
+++ b/DoAn_QuanLiKhachSan.csproj
@@ -64,9 +64,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frmChinhSuaPhong.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="frmChinhSuaPhong.cs" />
     <Compile Include="frmChinhSuaPhong.Designer.cs">
       <DependentUpon>frmChinhSuaPhong.cs</DependentUpon>
     </Compile>
@@ -76,21 +74,19 @@
     <Compile Include="FrmDangNhap.Designer.cs">
       <DependentUpon>FrmDangNhap.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmQuanLiThongTinNhanVien.cs">
-      <SubType>Form</SubType>
+    <Compile Include="frmDanhSachKhachHang.cs" />
+    <Compile Include="frmDanhSachKhachHang.Designer.cs">
+      <DependentUpon>frmDanhSachKhachHang.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmQuanLiThongTinNhanVien.cs" />
     <Compile Include="frmQuanLiThongTinNhanVien.Designer.cs">
       <DependentUpon>frmQuanLiThongTinNhanVien.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmThongTinNhanVien.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="frmThongTinNhanVien.cs" />
     <Compile Include="frmThongTinNhanVien.Designer.cs">
       <DependentUpon>frmThongTinNhanVien.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmDanhSachPhong.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="frmDanhSachPhong.cs" />
     <Compile Include="frmDanhSachPhong.Designer.cs">
       <DependentUpon>frmDanhSachPhong.cs</DependentUpon>
     </Compile>
@@ -114,9 +110,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="frmThayDoiMatKhau.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="frmThayDoiMatKhau.cs" />
     <Compile Include="frmThayDoiMatKhau.Designer.cs">
       <DependentUpon>frmThayDoiMatKhau.cs</DependentUpon>
     </Compile>
@@ -125,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmDangNhap.resx">
       <DependentUpon>FrmDangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmDanhSachKhachHang.resx">
+      <DependentUpon>frmDanhSachKhachHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmQuanLiThongTinNhanVien.resx">
       <DependentUpon>frmQuanLiThongTinNhanVien.cs</DependentUpon>
