--- a/DoAn_QuanLiKhachSan.csproj
+++ b/DoAn_QuanLiKhachSan.csproj
@@ -64,7 +64,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frmChinhSuaPhong.cs" />
+    <Compile Include="frmChinhSuaPhong.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmChinhSuaPhong.Designer.cs">
       <DependentUpon>frmChinhSuaPhong.cs</DependentUpon>
     </Compile>
@@ -74,19 +76,27 @@
     <Compile Include="FrmDangNhap.Designer.cs">
       <DependentUpon>FrmDangNhap.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmDanhSachKhachHang.cs" />
+    <Compile Include="frmDanhSachKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmDanhSachKhachHang.Designer.cs">
       <DependentUpon>frmDanhSachKhachHang.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmQuanLiThongTinNhanVien.cs" />
+    <Compile Include="frmQuanLiThongTinNhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmQuanLiThongTinNhanVien.Designer.cs">
       <DependentUpon>frmQuanLiThongTinNhanVien.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmThongTinNhanVien.cs" />
+    <Compile Include="frmThongTinNhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmThongTinNhanVien.Designer.cs">
       <DependentUpon>frmThongTinNhanVien.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmDanhSachPhong.cs" />
+    <Compile Include="frmDanhSachPhong.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmDanhSachPhong.Designer.cs">
       <DependentUpon>frmDanhSachPhong.cs</DependentUpon>
     </Compile>
@@ -110,7 +120,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="frmThayDoiMatKhau.cs" />
+    <Compile Include="frmThayDoiMatKhau.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmThayDoiMatKhau.Designer.cs">
       <DependentUpon>frmThayDoiMatKhau.cs</DependentUpon>
     </Compile>
