--- a/DAO_BLL/DAO_BLL.csproj
+++ b/DAO_BLL/DAO_BLL.csproj
@@ -47,10 +47,12 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="HinhThucDAO.cs" />
     <Compile Include="KhachHangDAO.cs" />
     <Compile Include="LoaiNhanVienDAO.cs" />
     <Compile Include="LoaiPhongDAO.cs" />
     <Compile Include="NhanVienDAO.cs" />
+    <Compile Include="PhieuThueDAO.cs" />
     <Compile Include="PhongDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
