--- a/DoAn_QuanLiKhachSan.csproj
+++ b/DoAn_QuanLiKhachSan.csproj
@@ -177,7 +177,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="BO\BO.csproj">
